Fix: modern - fix potential slider captions overlapping on page load fixes #1293

--- a/assets/front/scss/0_3_components/_temp.scss
+++ b/assets/front/scss/0_3_components/_temp.scss
@@ -6,15 +6,7 @@
 }
 
 
-
-/* FLICKITY SLIDER  */
-
-.carousel-cell { width: 100%; overflow: hidden;}
-.carousel img { min-width: 100%;}
-
-
 // Patches
-
 
 .article-container .grid-container__alternate .entry-footer {
   margin: 0;
